action ve viewlardaki model/listmodel uyuşmazlığı düzeltildi.

--- a/CourseSelection/Views/Advisors/Details.cshtml
+++ b/CourseSelection/Views/Advisors/Details.cshtml
@@ -1,23 +1,43 @@
-﻿@model CourseSelection.Models.Advisor
+﻿@model List<CourseSelection.Models.Advisor>
 
-@{
-    ViewData["Title"] = "Öğrenci Detayları";
-}
 
-<h1>Öğrenci Detayları</h1>
-<a asp-action="SelectCourse" asp-route-studentId="@Model.AdvisorID" class="btn btn-info">Kurs Seç</a>
 
-<div>
+
+@* <div>
     <h4>@Model.FullName</h4>
     <p><strong>Email:</strong> @Model.Email</p>
     <p><strong>ID:</strong> @Model.AdvisorID</p>
     
-</div>
+</div> *@
 
+
+<table>
+    <thead>
+        <tr>
+            <th>Advisor ID</th>
+            <th>Full Name</th>
+            <th>Title</th>
+            <th>Department</th>
+            <th>Email</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var advisor in Model)
+        {
+            <tr>
+                <td>@advisor.AdvisorID</td>
+                <td>@advisor.FullName</td>
+                <td>@advisor.Title</td>
+                <td>@advisor.Department</td>
+                <td>@advisor.Email</td>
+
+            </tr>
+        }
+    </tbody>
+</table>
 <p>
-    <a asp-action="Index" class="btn btn-secondary">Listeye Dön</a>
+    <a asp-action="Index" class="btn btn-secondary">Geri Dön</a>
 </p>
-
 
 
 @* @model IEnumerable<CourseSelection.Models.Course>
