öğrencinin kurs görüntülemesindeki eksik sütunlar vb. eklendi hala eksik fonksiyonlar var.

--- a/CourseSelection/Views/Account/LoginUser.cshtml
+++ b/CourseSelection/Views/Account/LoginUser.cshtml
@@ -12,7 +12,7 @@
         <input asp-for="Username" />
     </div>
     <div>
-        <label>PasswordHash:</label>
+        <label>Password:</label>
         <input asp-for="PasswordHash" type="password" />
     </div>
     <div>
