kurs secim fonksiyonları

--- a/CourseSelection/Views/Advisors/Index.cshtml
+++ b/CourseSelection/Views/Advisors/Index.cshtml
@@ -70,7 +70,8 @@
         <a asp-action="Details" asp-route-id="@Model.AdvisorID" class="btn btn-info">View Advisor List</a>
         <a asp-action="PersonalInfo" asp-route-id="@Model.AdvisorID" class="btn btn-primary">View My Info</a>
             <a asp-action="MyStudents" asp-route-id="@Model.AdvisorID" class="btn btn-info">View My Students</a>
-        
+        <a asp-action="ViewStudentCourses" asp-route-id="@Model.AdvisorID" class="btn btn-info">View My Students Courses</a>
+        <a asp-action="ApproveCourses" asp-route-id="@Model.AdvisorID" class="btn btn-info">Approve Courses</a>
     </div> 
 
     
