--- a/CourseSelection/Views/Account/LoginUser.cshtml
+++ b/CourseSelection/Views/Account/LoginUser.cshtml
@@ -22,7 +22,7 @@
                                 <option value="Advisor">Advisor</option>
                             </select>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
+                        <button type="submit" class="btn custom-pink-button w-100">Login</button>
                     </form>
                     @if (!string.IsNullOrEmpty(ViewBag.Message))
                     {
