frontend gereksiz kısımların kaldırılması.

--- a/CourseSelection/Views/Student/Details.cshtml
+++ b/CourseSelection/Views/Student/Details.cshtml
@@ -15,5 +15,5 @@
 </div>
 
 <p>
-    <a asp-action="Index" class="btn btn-secondary">Listeye Dön</a>
+    <a asp-action="Index" asp-route-id="@Model.StudentID" class="btn btn-secondary">Listeye Dön</a>
 </p>
