--- a/CourseSelection/Views/Student/CourseSelection.cshtml
+++ b/CourseSelection/Views/Student/CourseSelection.cshtml
@@ -3,7 +3,7 @@
 <h2>Select Courses</h2>
 
 <form method="post" asp-action="CourseSelection">
-    <input type="hidden" name="studentId" value="@ViewBag.StudentID" />
+    <input type="hidden" name="StudentId" value="@ViewBag.StudentID" />
     <table class="table">
         <thead>
             <tr>
