--- a/CourseSelection/Views/Shared/_Layout.cshtml
+++ b/CourseSelection/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-controller="Account" asp-action="LoginUser">CourseSelection</a>
+                <!-- Düzenlenmiş CourseSelection Linki -->
+                <a class="nav-link text-dark" href="/Account/LoginUser">CourseSelection</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,4 +54,5 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
 
